K8S/events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventsservice
  template:
    metadata:
      labels:
        app: eventsservice
    spec:
      containers:
        - name: eventsservice
          image: omersadikovic/eventsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: events-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: eventsservice
  ports:
  - name: eventsservice
    protocol: TCP
    port: 8080
    targetPort: 8080
  # - name: plafromgrpc
  #   protocol: TCP
  #   port: 666
  #   targetPort: 666
