K8S/mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - name: mongodb
    protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
