K8S/nannies-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanniesnpservice-srv
spec:
  type: NodePort
  selector:
    app: nanniesservice
  ports:
    - name: nanniesservice
      protocol: TCP
      port: 8080
      targetPort: 8080
