K8S/students-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentsservice
  template:
    metadata:
      labels:
        app: studentsservice
    spec:
      containers:
        - name: studentsservice
          image: omersadikovic/studentsservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: students-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: studentsservice
  ports:
  - name: studentsservice
    protocol: TCP
    port: 8080
    targetPort: 8080
  # - name: plafromgrpc
  #   protocol: TCP
  #   port: 666
  #   targetPort: 666
